attempted to fix vh on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,6 @@ body {
   border: 1px solid white;
   color: white;
   font-size: 1.1em;
-  /*height: 30px;*/
   padding: 0.2em 0.8em;
   cursor: pointer;
   font-weight: bold;
@@ -112,6 +111,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  transition: 1s;
+}
+
+.pet-icon {
   transition: 1s;
 }
 
@@ -401,8 +404,8 @@ input {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  bottom: 0;
+  right: 0;
   background-color: rgba(0,0,0,0.2);
   display: flex;
   justify-content: center;
